# Tonality

./: .gitignore  .tonality_session.json  CLAUDE.md  CPP_PORT.md  INDEX.md  INTEGRATION.md  LIBRARY.md  LICENSE.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
audit/: AUDIT.md  RUNBOOK.md
audit/checks/: scaling_probe.py  test_catalog_invariants.py
benchmarks/: README.md  artifacts.py  baseline-2026-07-08.md  freezability.py  latency.py
data/: chord_qualities.json  functions_major.json  functions_minor.json  intervals.json  key_profiles.json  scales.json  scoring_priors.json  structural_key.json  swing_feel.json
docs/: boundary-brief.md  phase6-brief-beyond-12tet.md
docs/reviews/: 2026-07_gap-b-design.html  2026-07_melodic-tendency-design.html  2026-07_next-frontier.html  2026-07_re6-decisions.html  2026-07_re6b-plan.html  2026-07_rhythm-search-assessment.html  2026-07_ruleset-library-findings.html  2026-07_search-identities-review.html  2026-07_search-voicings-design.html  2026-07_search-voicings-review.html  2026-07_style-ruleset-vision.html  README.md
examples/: push_grid_demo.py  quickstart_engine_demo.py
integrations/: PROTOCOL.md  README.md  key-grain-alignment.md
integrations/Tonality-Live/: brief.md  response.md
integrations/audiology/: ack-key-grain-alignment.md  ack-notice-re3.md  ack-re4-and-cors-answer.md  ack-re6-and-cors-landed.md  ack-response-19-and-re2.md  ack-response-20-scale-names.md  brief-10.md  brief-11.md  brief-12.md  brief-13.md  brief-14.md  brief-15.md  brief-16.md  brief-17.md  brief-18.md  brief-19-chroma.md  brief-2.md  brief-20-scale-name-catalog.md  brief-3.md  brief-4.md  brief-5.md  brief-6.md  brief-7.md  brief-8.md  brief-9.md  brief.md  note-chirality-settled.md  notice-bridge-hardening-design-call.md  notice-key-grain-alignment.md  notice-re2-chord-analysis-corrections.md  notice-re3-silent-loss-fixes.md  notice-re4-mcp-unification.md  notice-re6-naming-rank-1based.md  notice-rotational-period-rename-ack.md  notice-rotational-period-rename.md  notice-scale-names-shipped.md  proposal-meter-validation.md  response-10.md  response-11.md  response-12.md  (+21 more)
integrations/auricle/: brief.md  notice-search-voicings.md  response.md
integrations/corpus-workbench/: seed.md
integrations/hypersaw/: README.md  brief.md  response.md
integrations/solve-coagula/: brief-2.md  brief.md  notice-cbms-default-response.md  notice-cbms-default.md  response-2.md  response.md  vl-corpus.json
integrations/style-manifold/: seed.md
integrations/terrane/: brief-2.md  brief-3.md  brief.md  notice-cbms-default-ack.md  notice-cbms-default-response.md  notice-cbms-default.md  notice-re2-cadence-corrections.md  response-2.md  response-3.md  response.md
integrations/tonality-core/: brief.md  notice-ci-required.md  notice-conformance-drift-re2-re3.md  notice-pin-determinism.md  notice-search-layer.md  notice-search-voicings.md  notice-slice-1b-export.md  ratify-ci-required.md  response-ci-required.md  response-conformance-drift-re2-re3.md  response-slice-1b-export.md
integrations/wend/: TONALITY_BRIEF_spine-oracle-surface.md  ack-tendency-and-voicings.md  brief-2.md  brief-3.md  brief-4.md  brief.md  notice-df-fields.md  notice-harmony-family.md  notice-melodic-tendency.md  notice-search-identities.md  notice-search-voicings.md  ratify-spine-oracle-surface.md  response-2.md  response-3.md  response-4.md  response-spine-oracle-surface.md  response.md
integrations/wont/: ack-per-run-pooling.md  brief-2.md  brief.md  notice-harmony-family.md  notice-harmony-induction.md  notice-manifest-firings.md  notice-markov-alignment.md  response-2.md  response.md
mts/: __init__.py  notation.py  session.py  workspace.py
mts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mts/analysis/: CLAUDE.md  __init__.py  analytical_context.py  builders.py  cadence.py  chord_analysis.py  comparisons.py  containment.py  equivalence.py  errors.py  key_induction.py  meter_estimation.py  naming.py  pcset_math.py  results.py  scale_analysis.py  specs.py  succession.py  summaries.py  tendency.py  timeline.py  voice_leading.py  voicings.py
mts/cli/: push.py  push_grid.py
mts/context/: __init__.py  context.py  formatters.py  result_format.py
mts/core/: CLAUDE.md  bitmask.py  chord.py  enharmonics.py  interval.py  pitch.py  quality.py  realization.py  scale.py  setclass.py  spec_level.py  symmetry.py
mts/data/: chord_qualities.json  intervals.json  key_inertia.json  key_smoothing.json  melodic_tendency.json  meter_profiles.json  (+4 more)
port/: PORT.md  pin.json
scripts/: analyze_chord.py  analyze_scale.py  build_scale_or_chord.py  check_chord_scale_compat.py  ci-local.sh  compare_chords.py  demo_function_generation.py  export_versioned_data.py  update_port_pin.py  validate_function_mappings.py
tests/: conftest.py  test_analytical_context.py  test_bracelet_tonnetz.py  test_cadence.py  test_canonical_events.py  test_chord_aliases.py  test_chord_comparisons.py  test_chord_network.py  test_chord_spec_parser.py  test_colour_content.py  test_conformance.py  test_containment.py  test_core_input_policy.py  test_corpus_smoke.py  test_cross_part_patterns.py  test_dataset_record.py  test_demoted_consumers.py  test_equivalence.py  test_export.py  test_freezability.py  test_groove.py  test_harmonic_segmentation.py  test_harmony_family.py  test_http_bridge.py  test_induction.py  test_key_induction.py  test_key_inertia.py  test_key_tracking.py  test_keyboard_descriptor.py  test_loader_caches.py  test_manual_builders.py  test_mcp_tools.py  test_melodic_atoms.py  test_melodic_tendency.py  test_meter_estimation.py  test_meter_tracking.py  test_midi.py  test_midi_export.py  test_naming.py  test_no_machine_identity_leaks.py  (+41 more)
validation/: README.md  exercise_rules_patterns.py  validate_corpus.py
(+81 files in other folders)
