[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mts"
version = "0.1.0"
description = "Minimal music theory scaffolding"
authors = [{name = "Tonality"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mido>=1.3,<2",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
]
validation = [
    # Corpus accuracy harness (validation/) — parses RomanText ground truth and
    # renders scores to MIDI. Optional dev/test extra, never a runtime dep.
    "music21>=9",
]
dev = [
    # Test + coverage tooling. The conformance golden is the spec both
    # implementations are graded against (Decision 10); line coverage of the
    # Python reference matters most for the core identity layer the C++ port mirrors.
    "pytest>=8",
    "coverage>=7",
]

[tool.pytest.ini_options]
# The dev suite is tests/ only. Audit checks live in audit/checks/ and are run
# explicitly (`pytest audit/checks`) so a dev fix can never collide with the audit
# thread's checks in the dev Stop hook. See audit/AUDIT.md.
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mts*"]
exclude = ["tests*", "audit*"]

[project.urls]
Homepage = "https://example.com"
