[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mts"
version = "0.1.0"
description = "Tonality: a local-first music-theory engine for 12-TET pitch material — exact set-class/scale/chord combinatorics with evidence, plus an MCP endpoint for AI agents"
authors = [{name = "Julian Smith"}]
readme = "README.md"
requires-python = ">=3.10"
# PolyForm Noncommercial License 1.0.0 (decided 2026-07-13, ROADMAP RE-1). Source-
# available, noncommercial-only; not OSI, so the classifier is Other/Proprietary
# and the license points at the file (the file-table form works on setuptools>=61,
# and setuptools bundles LICENSE.md into the sdist/wheel by default).
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
]
dependencies = [
    "mido>=1.3,<2",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
]
validation = [
    # Corpus accuracy harness (validation/) — parses RomanText ground truth and
    # renders scores to MIDI. Optional dev/test extra, never a runtime dep.
    "music21>=9",
]
dev = [
    # Test + coverage tooling. The conformance golden is the spec both
    # implementations are graded against (Decision 10); line coverage of the
    # Python reference matters most for the core identity layer the C++ port mirrors.
    "pytest>=8",
    "coverage>=7",
]

[tool.pytest.ini_options]
# The dev suite is tests/ only. Audit checks live in audit/checks/ and are run
# explicitly (`pytest audit/checks`) so a dev fix can never collide with the audit
# thread's checks in the dev Stop hook. See audit/AUDIT.md.
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mts*"]
exclude = ["tests*", "audit*"]

[tool.setuptools.package-data]
mts = ["data/*.json", "data/rulesets/*.json", "data/patterns/*.json", "data/patterns/cross_part/*.json"]

[project.scripts]
# The MCP endpoint needs the optional extra: pip install 'mts[mcp]' (the
# import is guarded with that message). The bridge is stdlib-only.
tonality-mcp = "mts.mcp.server:main"
tonality-bridge = "mts.mcp.bridge:main"

[project.urls]
Homepage = "https://github.com/Lifted-Truck/Tonality"
